ver1.2.0 ・ボードF/W update機能追加 ・Groveセンサ制御用のノード追加   - RGBバックライト液晶モジュール   - I2C タッチセンサ   - Grove:ジェスチャー   - I2C カラーセンサ ・I2C動作安定化 ・#22動作安定化 ・#16動作安定化 ・その他細かい修正

--- a/package.json
+++ b/package.json
@@ -45,10 +45,14 @@
       "tpcBuzzer": "tpcBuzzer.js",
       "tpcLed": "tpcLed.js",
       "tpcButton": "tpcButton.js",
-      "tpConfigSerial": "tpConfigSerial.js"
+      "tpConfigSerial": "tpConfigSerial.js",
+      "tpgRgbLcd": "tpgRgbLcd.js",
+      "tpgI2cTouchSensor": "tpgI2cTouchSensor.js",
+      "tpgI2cColorSensor": "tpgI2cColorSensor.js",
+      "tpgGestureSensor": "tpgGestureSensor.js"
     }
   },
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Node-RED nodes for Tibbo-Pi P3",
   "main": "tpInitialize.js",
   "scripts": {},
